[gd_scene load_steps=2 format=3 uid="uid://up732ly7s02n"]

[ext_resource type="Script" path="res://src/Scripts/Controllers/GameOver.gd" id="1_xm885"]

[node name="MainMenu2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_xm885")

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VSplitContainer" type="HSplitContainer" parent="CanvasLayer/GameOver"]
layout_mode = 2
offset_left = 34.0
offset_top = 99.0
offset_right = 147.0
offset_bottom = 122.0

[node name="Label" type="Label" parent="CanvasLayer/GameOver/VSplitContainer"]
layout_mode = 2
text = "Score"

[node name="HSlider" type="Label" parent="CanvasLayer/GameOver/VSplitContainer"]
layout_mode = 2
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.5
offset_top = -121.0
offset_right = 40.5
grow_horizontal = 2
grow_vertical = 0

[node name="RestartBtn" type="Button" parent="CanvasLayer/GameOver/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitBtn" type="Button" parent="CanvasLayer/GameOver/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -119.0
offset_right = 37.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
horizontal_alignment = 1

[node name="Pause" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Pause"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.5
offset_top = -121.0
offset_right = 40.5
grow_horizontal = 2
grow_vertical = 0

[node name="ResumeBtn" type="Button" parent="CanvasLayer/Pause/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="PauseQuitBtn" type="Button" parent="CanvasLayer/Pause/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/GameOver/VBoxContainer/RestartBtn" to="CanvasLayer" method="_on_restart_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOver/VBoxContainer/QuitBtn" to="CanvasLayer" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/VBoxContainer/ResumeBtn" to="CanvasLayer" method="_on_resume_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/VBoxContainer/PauseQuitBtn" to="CanvasLayer" method="_on_pause_quit_btn_pressed"]
